# sheet-music-reader

./: README.md  ideas.txt
src/: CMakeLists.txt  argparser.cpp  argparser.h  build_run.sh  main.cpp  reader.cpp  reader.h  run_tests.cpp  staff.cpp  staff.h  staff_segr.cpp  staff_segr.h
src/tests/: CMakeLists.txt  argparser_tests.h  reader_tests.h
