cmake_minimum_required(VERSION 2.8)
project( test-sheet-music-reader )
find_package( OpenCV REQUIRED )
find_package( GTest REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( test-sheet-music-reader ../run_tests.cpp ../reader.cpp ../argparser.cpp )
target_link_libraries( test-sheet-music-reader ${OpenCV_LIBS} GTest::GTest GTest::Main)
